build gallon to liter function

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src='js/scripts.js'></script>
   <link href="css/styles.css" rel='stylesheet' type="text/css">
-  <title>Document</title>
+  <title>Cooking App</title>
 </head>
 <body>
-  
+  <h1>Cooking App</h1>
+  <p>Welcome to the cooking app that will solve your every need!</p>
 </body>
 </html>
